--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "kata-clean-arquitecture-public",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "dev": "ts-node app.ts",
     "test": "jest"
   },
   "repository": {
@@ -17,10 +20,15 @@
     "url": "https://github.com/AlejandroRuizSumelzo/kata-clean-arquitecture-public/issues"
   },
   "homepage": "https://github.com/AlejandroRuizSumelzo/kata-clean-arquitecture-public#readme",
+  "dependencies": {
+    "readline": "^1.3.0"
+  },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.1",
     "typescript": "^5.8.3"
   }
 }
